add gallery with photo

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "glightbox": "^3.0.7"
   }
 }
